# trading-engine-hh

./: .clang-tidy  .gitignore  CMakeLists.txt  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
bench/: bench_dbn.cpp
core/bindings/: bindings.cpp
core/include/trading_sim/: dbn.hpp  dbn_reader.hpp  event.hpp  memory_mapped_file.hpp  version.hpp
core/src/: memory_mapped_file.cpp  version.cpp
data/: README.md
docs/: README.md
docs/benchmarks/: baseline.md
docs/decisions/: 0001-separate-wire-and-event-types.md  0002-expected-converter-return-type.md  0003-routing-vs-validation-split.md  0004-pure-cpp-core-no-python.md  0005-integer-nanodollars-price.md  0006-largest-first-layout-pinning.md  0007-char-valued-scoped-enums.md  0008-no-framework-tests-exit-codes.md  0009-little-endian-static-assert.md  0010-windowed-ring-buffer-order-book.md  0011-one-ring-per-side.md  0012-intrusive-fifo-and-order-id-map.md  0013-map-book-test-oracle.md  0014-action-to-book-mapping-modify-rule.md  0015-timestamp-sequence-flags-roles.md  0016-data-slice-xnas-itch-msft.md  0017-queue-position-aware-fills.md  0018-corrupt-frame-stop-and-failed-flag.md  0019-ingest-benchmark-methodology.md  0020-supported-dbn-version-guard.md  0021-modular-ingest-shared-core-file-and-socket.md  0022-fuzzing-the-framer.md
examples/: replay_dbn.cpp
fuzz/: frame_fuzz_libfuzzer.cpp
research/: __init__.py
research/backtest/: __init__.py
research/signals/: __init__.py
research/strategies/: __init__.py
tests/cpp/: test_dbn.cpp  test_dbn_reader.cpp  test_event.cpp  test_frame_fuzz.cpp  test_memory_mapped_file.cpp  test_smoke.cpp
tests/python/: test_import.py
